--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "parcel-bundler": "^1.12.5"
   },
   "dependencies": {
-    "html": "^1.0.0"
-  }
+    "html": "^1.0.0",
+    "parcel-plugin-asset-copier": "^1.1.0"
+  },
+  "assetsPath": "public"
 }
